--- a/app/src/main/res/layout/activity_exchange.xml
+++ b/app/src/main/res/layout/activity_exchange.xml
@@ -3,7 +3,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        tools:context=".app.exchange.ExchangeActivity" android:id="@+id/layout2">
+        tools:context=".app.exchange.ExchangeActivity"
+        android:id="@+id/layout2">
 
     <data>
 
@@ -36,8 +37,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="TIPO MOEDA"
-                app:layout_constraintTop_toTopOf="@+id/spinner"
-                android:labelFor="@id/spinner"
+                app:layout_constraintTop_toTopOf="@+id/spinnerTo"
+                android:labelFor="@id/spinnerTo"
                 android:layout_marginTop="50dp"
                 app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
                 android:id="@+id/labelSpinner"
@@ -48,7 +49,7 @@
         <androidx.appcompat.widget.AppCompatSpinner
                 android:layout_width="381dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/spinner"
+                android:id="@+id/spinnerTo"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="23dp"
@@ -57,7 +58,7 @@
                 android:spinnerMode="dialog"
                 app:layout_constraintHorizontal_bias="0.562"
                 app:layout_constraintTop_toBottomOf="@+id/labelSpinner"
-                android:tag="1"/>
+                android:tag="to"/>
 
         <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="395dp"
@@ -67,14 +68,17 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="23dp"
-                app:layout_constraintTop_toBottomOf="@+id/spinner" android:layout_marginTop="30dp">
+                app:layout_constraintTop_toBottomOf="@+id/spinnerTo"
+                android:layout_marginTop="30dp">
 
             <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:imeOptions="actionNext"
-                    android:hint="valor R$"
-                    android:text="@{viewModel.value}"
+                    android:imeOptions="actionGo"
+                    android:inputType="numberDecimal"
+                    android:hint="Valor R$"
+                    android:text="@={viewModel.valueTo}"
+                    style="@style/modal_material_input_edit_text"
                     android:id="@+id/edit_textnewvalue"/>
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -82,18 +86,18 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="MOEDA DESEJADA"
-                android:labelFor="@id/spinnerDesiredCoin"
+                android:labelFor="@id/spinnerFrom"
                 android:id="@+id/labelSpinnerDesiredCoin"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="93dp"
                 app:layout_constraintTop_toBottomOf="@+id/input_newValue"
-                app:layout_constraintBottom_toTopOf="@+id/spinnerDesiredCoin"/>
+                app:layout_constraintBottom_toTopOf="@+id/spinnerFrom"/>
 
         <androidx.appcompat.widget.AppCompatSpinner
                 android:layout_width="381dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/spinnerDesiredCoin"
+                android:id="@+id/spinnerFrom"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="23dp"
@@ -101,27 +105,30 @@
                 android:imeOptions="actionNext"
                 android:spinnerMode="dialog"
                 app:layout_constraintHorizontal_bias="0.937"
-                app:layout_constraintTop_toBottomOf="@+id/labelSpinnerDesiredCoin" android:tag="2"/>
+                app:layout_constraintTop_toBottomOf="@+id/labelSpinnerDesiredCoin"
+                android:tag="from"/>
 
 
-        <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="395dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/input_newValueDesiredCoin"
-                android:layout_marginEnd="23dp"
+        <LinearLayout
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="23dp"
-                app:layout_constraintTop_toBottomOf="@+id/spinnerDesiredCoin" android:layout_marginTop="30dp">
+                android:id="@+id/input_newValueDesiredCoin"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginStart="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/spinnerFrom"
+                android:layout_marginTop="30dp" android:layout_marginEnd="10dp">
 
-            <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:imeOptions="actionNext"
-                    android:hint="Novo Valor"
-                    android:text="@{viewModel.valueNew}"
-                    android:id="@+id/edit_textnewvalueDesiredCoin"/>
-        </com.google.android.material.textfield.TextInputLayout>
+            <TextView android:text="CONVERSÃO:"
+                      android:layout_width="100dp"
+                      android:layout_height="wrap_content"/>
+
+            <TextView android:text="@{viewModel.valueFrom}"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"/>
+
+        </LinearLayout>
 
         <Button
                 android:text="Converter"
@@ -130,7 +137,7 @@
                 android:layout_height="93dp"
                 android:id="@+id/btnconverter"
                 android:background="@color/buttons"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="40dp"
                 app:layout_constraintTop_toBottomOf="@+id/input_newValueDesiredCoin"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
