Finalização do layout e funcionamento

--- a/app/src/main/res/drawable-v24/shape_btn_cicle_write.xml
+++ b/app/src/main/res/drawable-v24/shape_btn_cicle_write.xml
@@ -8,7 +8,7 @@
         android:radius="@dimen/margin" />
 
     <stroke
-        android:color="#4d91eb"
+        android:color="@color/buttons"
         android:width="1dp"/>
 
     <solid
