--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,14 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
     <color name="white">#FFFFFF</color>
     <color name="toolBar">#FFD185</color>
     <color name="buttons">#FFD185</color>
+    <color name="text_title">#3f3f3f</color>
+    <color name="colorAccent">#ffffff</color>
+    <color name="red">#ff0000</color>
+    <color name="background">#ececec</color>
+    <color name="cancel">#e8e8e8</color>
+    <color name="green">#1b8500</color>
 
 </resources>
