--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -8,7 +8,7 @@
         <import type="android.view.View"/>
         <variable
                 name="viewModel"
-                type="br.com.exchange.app.history.viewmodel.HistoryViewModel"/>
+                type="br.com.exchange.app.history.HistoryViewModel"/>
 
     </data>
 
