--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
-            name="viewModel"
-            type="br.com.exchange.app.history.model.HistoryItemViewModel" />
+                name="historyItem"
+                type="br.com.exchange.app.history.HistoryItemViewModel" />
+
+        <import type="br.com.exchange.app.utils.Converter" />
     </data>
+
     <RelativeLayout
             android:id="@+id/card_history"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:background="@drawable/shape_btn_cicle_write">
 
@@ -21,82 +26,122 @@
                 android:paddingRight="16dp">
 
             <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp" android:id="@+id/linearLayout"
-                    app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
-                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginBottom="1dp">
-                <TextView
-                        android:text="De:"
-                        android:layout_width="150dp"
-                        android:layout_height="wrap_content" android:id="@+id/to_lbl" android:layout_weight="1"/>
-                <TextView
-                        android:layout_width="match_parent"
-                        android:text="@{viewModel.valueToFormatted}"
-                        android:layout_height="wrap_content" android:id="@+id/toValue" android:layout_weight="1"/>
-            </LinearLayout>
-            <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp" android:layout_marginBottom="1dp"
-                    app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
-                    android:id="@+id/linearLayout3" android:layout_marginTop="1dp"
-                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
-                <TextView
-                        android:text="Para:"
-                        android:layout_width="150dp"
-                        android:layout_height="wrap_content" android:id="@+id/from_lbl" android:layout_weight="1"/>
-                <TextView
-                        android:layout_width="match_parent"
-                        android:text="@{viewModel.valueFromFormatted}"
-                        android:layout_height="wrap_content" android:id="@+id/from_value" android:layout_weight="1"/>
-            </LinearLayout>
-            <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp" android:id="@+id/linearLayout2"
-                    android:layout_marginBottom="1dp"
-
-                    android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintBottom_toTopOf="@+id/linearLayoutDate">
-                <TextView
-                        android:text="Taxa:"
-                        android:layout_width="150dp"
-                        android:layout_height="wrap_content" android:id="@+id/rate_to_lbl"
-                        android:layout_weight="1"/>
-                <TextView
-                        android:text="@{viewModel.rateToFormatted}"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/rateTo_Value"
-                        android:layout_weight="1"/>
-            </LinearLayout>
-            <LinearLayout
-                    android:id="@+id/linearLayoutDate"
-
-                    android:orientation="horizontal"
+                    android:id="@+id/linearLayout"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
-                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                    android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="1dp"
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
                 <TextView
-                        android:text="Date:"
+                        android:id="@+id/to_lbl"
                         android:layout_width="150dp"
-                        android:layout_height="wrap_content" android:id="@+id/date_lbl" android:layout_weight="1"/>
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="De:" />
+
                 <TextView
+                        android:id="@+id/toValue"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@{viewModel.dateFormatted}"
-                        android:id="@+id/date_value" android:layout_weight="1"/>
+                        android:layout_weight="1"
+                        android:symbolTo="@{historyItem.symbolToField}"
+                        android:valueTo="@{historyItem.valueToField}" />
+            </LinearLayout>
+
+            <LinearLayout
+                    android:id="@+id/linearLayout3"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="1dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="1dp"
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+                <TextView
+                        android:id="@+id/from_lbl"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Para:" />
+
+                <TextView
+                        android:id="@+id/from_value"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@{historyItem.valueFromFormatted}" />
+            </LinearLayout>
+
+            <LinearLayout
+                    android:id="@+id/linearLayout2"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="1dp"
+
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="1dp"
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toTopOf="@+id/linearLayoutDate"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+
+                <TextView
+                        android:id="@+id/rate_to_lbl"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Taxa:" />
+
+                <TextView
+                        android:id="@+id/rateTo_Value"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@{historyItem.rateToFormatted}" />
+            </LinearLayout>
+
+            <LinearLayout
+                    android:id="@+id/linearLayoutDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="1dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+
+                <TextView
+                        android:id="@+id/date_lbl"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Date:" />
+
+                <TextView
+                        android:id="@+id/date_value"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@{historyItem.dateField}" />
+
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
